# accessor_stubs

./: .gitignore  README.md  pyproject.toml
ci/: build.py
src/accessor_stubs/: _registrar.py
